Добавлены две реализации работы с БД, а так же изменен конфиг проекта
