# api/openapi/v1/scrapper-api.yaml
@@ -25,6 +25,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiErrorResponse'
+        '405':
+          description: Метод не поддерживается
     delete:
       summary: Удалить чат
       parameters:
@@ -49,6 +51,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiErrorResponse'
+        '405':
+          description: Метод не поддерживается
   /links:
     get:
       summary: Получить все отслеживаемые ссылки
@@ -134,6 +138,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiErrorResponse'
+        '500':
+          description: Внутренняя ошибка
+  /tagedlinks:
+    get:
+      summary: Получить все отслеживаемые ссылки по тегам
+      parameters:
+        - name: Tg-Chat-Id
+          in: header
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Ссылки успешно получены
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListTagedLinks'
+        '400':
+          description: Некорректные параметры запроса
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiErrorResponse'
+
+
+
 components:
   schemas:
     LinkResponse:
@@ -198,3 +230,21 @@ components:
         link:
           type: string
           format: uri
+
+    TagedLink:
+      type: object
+      properties:
+        tage:
+          type: string
+        links:
+          type: array
+          items:
+            type: string
+
+    ListTagedLinks:
+      type: object
+      properties:
+        tagedLinks:
+          type: array
+          items:
+            $ref: '#/components/schemas/TagedLink'
